# RollDiff

./: README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  checksum.hpp  delta.cpp  delta.hpp  hash.hpp  patch.hpp  signature.cpp  signature.hpp
src/test/: CMakeLists.txt  main.cpp  test_data.h  tst_hash.h  tst_hash_roll.h
